fix: adjust for dark mode 2

--- a/rizhiy_com/static/main.css
+++ b/rizhiy_com/static/main.css
@@ -79,9 +79,6 @@ a:active {
     color: #68cc88;
   }
   #github-icon {
-    color: #fff;
-  }
-  #linkedin-icon {
-    color: #fff;
+    color: #c9d1d9;
   }
 }
